--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="origin-trial" content="AlrGyU/MNtIb/V6Q9y++RgcsMrWw+UHvml2tGJ1mGsPvMnF9mYNJikptKFEhPWi1MCEfTsz8DRWOqxXElPdS5AMAAABgeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjgwODAiLCJmZWF0dXJlIjoiVW5yZXN0cmljdGVkU2hhcmVkQXJyYXlCdWZmZXIiLCJleHBpcnkiOjE2NTg4Nzk5OTl9">
+    <meta http-equiv="origin-trial" content="AsWzBMDEyvS9kR4uqEkFx6F8QFgJ4lU6b1+qlEBuRbE9e9RIdrJfRwDRrgBTUghDOUuJQw462SjRSJpJflGmuwYAAABreyJvcmlnaW4iOiJodHRwczovL3RhcGFuYW5hbmQuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJVbnJlc3RyaWN0ZWRTaGFyZWRBcnJheUJ1ZmZlciIsImV4cGlyeSI6MTY1ODg3OTk5OX0=">
     <title>Running Untrusted JS Securely cross-browser</title>
 </head>
 <body>
