--- a/iframe.html
+++ b/iframe.html
@@ -8,6 +8,18 @@
         object-src 'none'; block-all-mixed-content; script-src 'unsafe-inline'; worker-src blob: 'self'; 
     "/>
     <meta http-equiv="origin-trial" content="AlrGyU/MNtIb/V6Q9y++RgcsMrWw+UHvml2tGJ1mGsPvMnF9mYNJikptKFEhPWi1MCEfTsz8DRWOqxXElPdS5AMAAABgeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjgwODAiLCJmZWF0dXJlIjoiVW5yZXN0cmljdGVkU2hhcmVkQXJyYXlCdWZmZXIiLCJleHBpcnkiOjE2NTg4Nzk5OTl9">
+    <meta http-equiv="origin-trial" content="AsWzBMDEyvS9kR4uqEkFx6F8QFgJ4lU6b1+qlEBuRbE9e9RIdrJfRwDRrgBTUghDOUuJQw462SjRSJpJflGmuwYAAABreyJvcmlnaW4iOiJodHRwczovL3RhcGFuYW5hbmQuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJVbnJlc3RyaWN0ZWRTaGFyZWRBcnJheUJ1ZmZlciIsImV4cGlyeSI6MTY1ODg3OTk5OX0=">
+    <title>Running Untrusted JS Securely cross-browser</title>
+</head>
+<body>
+    <p>Type and Try any untrusted JS here:</p>
+    <textarea id="scriptContent" name="story" rows="10" cols="100"></textarea><br/>
+    <button id="runButton">Run Script!</button>
+    <!-- <script src="runJSSecurely.js"></script> -->
+    <script type="module" src="index.js"></script>
+</body>
+</html>
+
     <title>Sandboxed Iframe to Run Untrusted JS</title>
 </head>
 <body>
