--- a/iframe.html
+++ b/iframe.html
@@ -248,9 +248,9 @@
         }
 
         function executeSomeDummyJS(script) {
-            /*dummyWorker.postMessage({
+            dummyWorker.postMessage({
                 exec: 1
-            });*/
+            });
         }
     </script>
 </body>
