--- a/iframe.html
+++ b/iframe.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="
         default-src 'none'; form-action 'none'; navigate-to 'none'; base-uri 'none'; 
-        object-src 'none'; block-all-mixed-content; script-src 'unsafe-inline'; worker-src blob: 'self'; 
+        object-src 'none'; block-all-mixed-content; script-src 'unsafe-inline'; child-src 'self' worker-src blob: 'self'; 
     "/>
     <meta http-equiv="origin-trial" content="AlrGyU/MNtIb/V6Q9y++RgcsMrWw+UHvml2tGJ1mGsPvMnF9mYNJikptKFEhPWi1MCEfTsz8DRWOqxXElPdS5AMAAABgeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjgwODAiLCJmZWF0dXJlIjoiVW5yZXN0cmljdGVkU2hhcmVkQXJyYXlCdWZmZXIiLCJleHBpcnkiOjE2NTg4Nzk5OTl9">
     <meta http-equiv="origin-trial" content="Ah78YWByHniS8I6GtsClaxe0bvp2mrlUC72xqIVROcVcJsUIWLOMPybFf2XR+hB98m1sWUpK/uTCTZr54I8juQIAAAB5eyJvcmlnaW4iOiJodHRwczovL2JsaXNzZnVsLWVkaXNvbi0yMjAxNTYubmV0bGlmeS5hcHA6NDQzIiwiZmVhdHVyZSI6IlVucmVzdHJpY3RlZFNoYXJlZEFycmF5QnVmZmVyIiwiZXhwaXJ5IjoxNjU4ODc5OTk5fQ==">
